--- a/week2/duration-prediction.ipynb
+++ b/week2/duration-prediction.ipynb
@@ -374,8 +374,7 @@
     "\n",
     "rmse = mean_squared_error(y_val, y_pred, squared=False)\n",
     "mlflow.log_metric(\"rmse\",rmse)\n",
-    "\n",
-    "mlflow.log_artifact(local_path=\"models/lin_reg.bin\", artifact_path=\"models_pickle\")"
+    "# best rmse 5.35\n"
    ]
   },
   {
